Added Open Sans font

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>[Insert project name here]</title>
+        <title>Project Aether</title>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>R.I.P. <a href="http://bunns.co">Bunn's</a></p>
+        <h1>Project Aether</h1>
+        <h2>About</h2>
+        <h2>Location Tracker</h2>
+        <h2>Statistics</h2>
     </body>
 </html>
