--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
         <meta charset="utf-8">
         <title>Project Aether</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Project Aether</h1>
-        <h2>About</h2>
-        <h2>Location Tracker</h2>
-        <h2>Statistics</h2>
+        <h1 class="center">Project Aether</h1>
+        <h2 class="center">Objective</h2>
+        <i class="material-icons">info_outline</i>
+        <p class="center">To release a balloon into the atmosphere while collecting an assortment of data during ascension and to retrieve the balloon after.</p>
+        <h2 class="center">Location Tracker</h2>
+        <h2 class="center">Statistics</h2>
     </body>
 </html>
