--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
         <meta charset="utf-8">
         <title>Project Aether</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="style.css">
+        <script src="https://use.fontawesome.com/a637ae048f.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
-        <h1 class="center">Project Aether</h1>
-        <h2 class="center">Objective</h2>
-        <i class="material-icons">info_outline</i>
-        <p class="center">To release a balloon into the atmosphere while collecting an assortment of data during ascension and to retrieve the balloon after.</p>
+        <h1 class="center">Project <span class="blue">Aether</span></h1>
+        <div class="center icon"><i class="fa fa-info-circle" id="infoBtn"></i></div>
+        <p class="center" style="display:none;" id="info">Our goal is to release a balloon into the atmosphere while collecting an assortment of data during ascension and to retrieve the balloon after.</p>
         <h2 class="center">Location Tracker</h2>
         <h2 class="center">Statistics</h2>
     </body>
