Began adding API call limitations

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     </head>
     <body>
         <h1 class="center">Project <span class="blue">Aether</span></h1>
-    </body>
+        <!--Placing this here so that it is easily accessible in the future-->
+        <a class="twitter-timeline" data-width="500" data-height="500" data-chrome="nofooter" href="https://twitter.com/Aether_Project">Tweets by Aether_Project</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </html>
