--- a/index.html
+++ b/index.html
@@ -5,12 +5,34 @@
         <title>Project Aether</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-        <script src="https://use.fontawesome.com/a637ae048f.js"></script>
+        <!--<script src="https://use.fontawesome.com/a637ae048f.js"></script>-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
-        <h1 class="center">Project <span class="blue">Aether</span></h1>
         <!--Placing this here so that it is easily accessible in the future-->
-        <a class="twitter-timeline" data-width="500" data-height="500" data-chrome="nofooter" href="https://twitter.com/Aether_Project">Tweets by Aether_Project</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+		<div id="mainContent">
+			<div id="mapContainer">
+			</div>
+			<div id="infoContainer">
+				<div class="kard">
+					418.3<span class="unit">&#160ft.</span> 
+				</div>
+				<div class="kard">
+					418.3 <span class="unit">&#160ft.</span> 
+				</div>
+				<div class="kard">
+					418.3 <span class="unit">&#160ft.</span> 
+				</div>
+				<div class="kard">
+					418.3 <span class="unit">&#160ft.</span> 
+				</div>
+				<div class="kard">
+					418.3 <span class="unit">&#160ft.</span> 
+				</div>
+			</div>
+		</div>
+		<div id="sidebar">
+        <a class="twitter-timeline" data-width="500"  data-chrome="nofooter" href="https://twitter.com/hillaryclinton">Tweets by Aether_Project</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+		</div>
 </html>
