--- a/index.html
+++ b/index.html
@@ -8,11 +8,57 @@
         <!--<script src="https://use.fontawesome.com/a637ae048f.js"></script>-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="script.js"></script>
+		<script>
+
+			// This example creates a simple polygon representing the Bermuda Triangle.
+
+			function initMap() {
+				var map = new google.maps.Map(document.getElementById('mapContainer'), {
+						zoom: 12,
+						center: {
+							lat: 29.775055,
+							lng:-95.809635
+						},
+						mapTypeId: 'terrain'
+					});
+
+				// Define the LatLng coordinates for the polygon's path.
+				var triangleCoords = [{
+						lat: 29.761430, 
+						lng: -95.808648
+					}, {
+						lat: 29.770743, 
+						lng: -95.835416
+					}, {
+						lat: 29.778994, 
+						lng: -95.827799
+					}, {
+						lat: 29.761430, 
+						lng: -95.808648
+					}
+				];
+
+				// Construct the polygon.
+				var katyTriangle = new google.maps.Polygon({
+						paths: triangleCoords,
+						strokeColor: '#FF0000',
+						strokeOpacity: 0.8,
+						strokeWeight: 2,
+						fillColor: '#FF0000',
+						fillOpacity: 0.35
+					});
+				katyTriangle.setMap(map);
+			}
+		</script>
+		<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4SptmcVrbrSgFEpPM3A454ql-jAU2w4w&callback=initMap">
+		</script>
     </head>
     <body>
         <!--Placing this here so that it is easily accessible in the future-->
 		<div id="mainContent">
 			<div id="mapContainer">
+
 			</div>
 			<div id="infoContainer">
 				<div class="kard">
