Styling + Toggle functions

--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
 			</div>
 		</div>
 		<div id="sidebar">
-        <a class="twitter-timeline" data-width="500"  data-chrome="nofooter" href="https://twitter.com/hillaryclinton">Tweets by Aether_Project</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a class="twitter-timeline" data-width="500"  data-chrome="nofooter" href="https://twitter.com/aether_project">Tweets by Aether_Project</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
 </html>
