--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Project Aether</title>
+        <title>Aether Project</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -30,16 +30,16 @@
 
 				// Define the LatLng coordinates for the polygon's path.
 				var triangleCoords = [{
-						lat: 29.761430, 
+						lat: 29.761430,
 						lng: -95.808648
 					}, {
-						lat: 29.770743, 
+						lat: 29.770743,
 						lng: -95.835416
 					}, {
-						lat: 29.778994, 
+						lat: 29.778994,
 						lng: -95.827799
 					}, {
-						lat: 29.761430, 
+						lat: 29.761430,
 						lng: -95.808648
 					}
 				];
@@ -62,13 +62,13 @@
     </head>
     <body>
         <!--Placing this here so that it is easily accessible in the future-->
-		
+
 		<div id="sidebar">
 			<div id="logo">
 				Aether Project
 			</div>
 			<div id="twitterContainer">
-			<a class="twitter-timeline" data-width="400" data-chrome="nofooter" href="https://twitter.com/Real_CSS_Tricks">Tweets by Aether_Project</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<a class="twitter-timeline" data-width="400" data-chrome="nofooter" href="https://twitter.com/Aether_Project">Tweets by Aether_Project</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
 			<div id="infoContainer">
 				<div class="kard">
@@ -92,6 +92,6 @@
 			<div id="mapContainer">
 
 			</div>
-			
+
 		</div>
 </html>
