--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <!--<script src="https://use.fontawesome.com/a637ae048f.js"></script>-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="script.js"></script>
 		<script>
@@ -61,8 +60,6 @@
 		</script>
     </head>
     <body>
-        <!--Placing this here so that it is easily accessible in the future-->
-
 		<div id="sidebar">
 			<div id="logo">
 				Aether Project
@@ -89,9 +86,6 @@
 			<div id="sidebarButton">
 			<i id="arrowIcon" class="material-icons">keyboard_arrow_left</i>
 			</div>
-			<div id="mapContainer">
-
-			</div>
-
+			<div id="mapContainer"></div>
 		</div>
 </html>
