--- a/index.html
+++ b/index.html
@@ -2,68 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
         <title>Aether Project</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="script.js"></script>
-		<script>
-
-			// This example creates a simple polygon representing the Bermuda Triangle.
-
-			function initMap() {
-				var map = new google.maps.Map(document.getElementById('mapContainer'), {
-						zoom: 12,
-						center: {
-							lat: 29.775055,
-							lng:-95.809635
-						},
-						mapTypeId: 'terrain',
-						mapTypeControl: true,
-						mapTypeControlOptions: {
-							style: google.maps.MapTypeControlStyle.HORIZONTAL_BAR,
-							position: google.maps.ControlPosition.TOP_RIGHT
-						}
-					});
-
-				// Define the LatLng coordinates for the polygon's path.
-				var triangleCoords = [{
-						lat: 29.761430,
-						lng: -95.808648
-					}, {
-						lat: 29.770743,
-						lng: -95.835416
-					}, {
-						lat: 29.778994,
-						lng: -95.827799
-					}, {
-						lat: 29.761430,
-						lng: -95.808648
-					}
-				];
-
-				// Construct the polygon.
-				var katyTriangle = new google.maps.Polygon({
-						paths: triangleCoords,
-						strokeColor: '#FF0000',
-						strokeOpacity: 0.8,
-						strokeWeight: 2,
-						fillColor: '#FF0000',
-						fillOpacity: 0.35
-					});
-				katyTriangle.setMap(map);
-			}
-		</script>
-		<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4SptmcVrbrSgFEpPM3A454ql-jAU2w4w&callback=initMap">
-		</script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxeU3JHfOGFY71jQDt3IAmpVyOilUvpM&callback=retrieveMapData"></script>
     </head>
     <body>
 		<div id="sidebar">
-			<div id="logo">
-				Aether Project
-			</div>
+			<div id="logo">Aether Project</div>
 			<div id="twitterContainer">
 			<a class="twitter-timeline" data-width="400" data-chrome="nofooter" href="https://twitter.com/Aether_Project">Tweets by Aether_Project</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
