--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1.0">
         <title>Aether Project Tracker</title>
+		<link rel='shortcut icon' type='image/x-icon' href='favicon.ico'/>
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="script.js"></script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxeU3JHfOGFY71jQDt3IAmpVyOilUvpM&callback=retrieveMapData"></script>
     </head>
     <body>
 		<div id="sidebar">
-			<div id="logo">Aether Project</div>
+			<div id="logo">
+				Aether Project
+				<a href="https://twitter.com/Aether_Project" target="/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+			</div>
 			<div id="twitterContainer">
-			<a class="twitter-timeline" data-width="400" data-chrome="nofooter" href="https://twitter.com/Aether_Project">Tweets by Aether_Project</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+				<a class="twitter-timeline" data-width="400" data-chrome="nofooter" href="https://twitter.com/Aether_Project">Tweets by Aether_Project</a>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
 			<div id="infoContainer">
 				<div class="kard">
