Minor text changes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
     <body>
 		<div id="sidebar">
 			<div id="logo">
-				Aether Project
-				<a href="https://twitter.com/Aether_Project" target="/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+				<div class="imgContainer"></div>
+				<div>
+					AETHER PROJECT
+				</div>
+				<div>
+					<a href="https://twitter.com/Aether_Project" target="/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+				</div>
 			</div>
 			<div id="twitterContainer">
 				<a class="twitter-timeline" data-width="400" data-chrome="nofooter" href="https://twitter.com/Aether_Project">Tweets by Aether_Project</a>
