Set data fields upon load

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
 				</div>
 			</div>
 			<div id="twitterContainer">
-				<a class="twitter-timeline" data-width="400" data-chrome="nofooter" href="https://twitter.com/Aether_Project">Tweets by Aether_Project</a>
+				<a class="twitter-timeline" data-theme="dark" data-width="400" data-chrome="nofooter transparent" href="https://twitter.com/Aether_Project">Tweets by Aether_Project</a>
 				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
 			<div id="infoContainer">
 				<div class="kard">
-					<p>(-95.34, 24.67)</p>
+					<p id="position">(lat, lng)</p>
 				</div>
 				<div class="kard">
-					<p>418.3<span class="unit">&#160ft. </span> </p>
+					<p><span id="altitude">alt</span><span class="unit">&#160ft </span> </p>
 				</div>
 				<div class="kard">
-					<p>19 <span class="unit">&#160&#176C </span> </p>
+					<p><span id="temperature">temp</span><span class="unit">&#160&#176F </span> </p>
 				</div>
 				<div class="kard">
-					<p>0.977 <span class="unit">&#160atm. </span> </p>
+					<p><span id="pressure">psr</span><span class="unit">&#160psi </span> </p>
 				</div>
 			</div>
 		</div>
