Added link to aprs.fi

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 					<p><span id="pressure">psr</span><span class="unit">&#160psi </span> </p>
 				</div>
 			</div>
+			<div id="links">
+				<a href="https://aprs.fi" target="/">aprs.fi</a>
+			</div>
 		</div>
 		<div id="mainContent">
 			<div id="mapContainer"></div>
