--- a/index.html
+++ b/index.html
@@ -1,56 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1.0">
-        <title>Aether Project Tracker</title>
-		<link rel='shortcut icon' type='image/x-icon' href='favicon.ico'/>
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script type="text/javascript" src="script.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxeU3JHfOGFY71jQDt3IAmpVyOilUvpM&callback=retrieveMapData"></script>
-    </head>
-    <body>
-		<div id="sidebar">
-			
-			<div id="sidebarButton">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="initial-scale=1.0">
+	<title>Aether Project Tracker</title>
+	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+	 crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxeU3JHfOGFY71jQDt3IAmpVyOilUvpM&callback=retrieveData"></script>
+</head>
+
+<body>
+	<div id="sidebar">
+		<div id="sidebarButton">
 			<i id="arrowIcon" class="material-icons">keyboard_arrow_left</i>
+		</div>
+		<div id="logo">
+			<div class="imgContainer"></div>
+			<div>
+				AETHER PROJECT
 			</div>
-			<div id="logo">
-				<div class="imgContainer"></div>
-				<div>
-					AETHER PROJECT
-				</div>
-				<div>
-					<a href="https://twitter.com/Aether_Project" target="/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-				</div>
-			</div>
-			<div id="twitterContainer">
-				<a class="twitter-timeline" data-theme="dark" data-width="400" data-chrome="nofooter transparent" href="https://twitter.com/Aether_Project">Tweets by Aether_Project</a>
-				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-			</div>
-			<div id="infoContainer">
-				<div class="kard">
-					<p id="position">(lat, lng)</p>
-				</div>
-				<div class="kard">
-					<p><span id="altitude">alt</span><span class="unit">&#160ft </span> </p>
-				</div>
-				<div class="kard">
-					<p><span id="temperature">temp</span><span class="unit">&#160&#176F </span> </p>
-				</div>
-				<div class="kard">
-					<p><span id="pressure">psr</span><span class="unit">&#160psi </span> </p>
-				</div>
-			</div>
-			<div id="links">
-				<a href="https://aprs.fi" target="/">aprs.fi</a>
+			<div>
+				<a href="https://twitter.com/Aether_Project" target="/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 			</div>
 		</div>
-		<div id="mainContent">
-			<div id="mapContainer"></div>
+		<div id="twitterContainer">
+			<h1>Latest Tweet</h1>
+			<span id="twitterText"></span>
+			<div id="twitterImages"></div>
 		</div>
+		<div id="infoContainer">
+			<div class="kard">
+				<p id="position">(lat, lng)</p>
+			</div>
+			<div class="kard">
+				<p><span id="altitude">alt</span><span class="unit">&#160ft </span> </p>
+			</div>
+			<div class="kard">
+				<p><span id="temperature">temp</span><span class="unit">&#160&#176F </span> </p>
+			</div>
+			<div class="kard">
+				<p><span id="pressure">psr</span><span class="unit">&#160psi </span> </p>
+			</div>
+		</div>
+		<div id="links">
+			<a href="https://aprs.fi" target="/">aprs.fi</a>
+		</div>
+	</div>
+	<div id="mainContent">
+		<div id="mapContainer"></div>
+	</div>
+
 </html>
