--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
 	 crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,900" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
@@ -31,9 +31,10 @@
 			</div>
 		</div>
 		<div id="twitterContainer">
-			<h1>Latest Tweet</h1>
-			<span id="twitterText"></span>
-			<div id="twitterImages"></div>
+			<div id="accName">Aether Project<span id="atName"> @Aether_Project:</span></div>
+			<div id="twitterText"></div>
+			<div id="twitterImages">
+			</div>
 		</div>
 		<div id="infoContainer">
 			<div class="kard">
