--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxeU3JHfOGFY71jQDt3IAmpVyOilUvpM&callback=retrieveData"></script>
+	<style type="text/css" id="cheek">
+	</style>
 </head>
 
 <body>
