MInor bug fixes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</div>
 		<div id="infoContainer">
 			<div class="kard">
-				<p id="position">(lat, lng)</p>
+				<p id="position">(lat, long)</p>
 			</div>
 			<div class="kard">
 				<p><span id="altitude">alt</span><span class="unit">&#160ft </span> </p>
