--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 			</div>
 		</div>
 		<div id="links">
+			<p style="color:white;font-size:50%;">In Loving Memory of Will Zhao</p>
 			<a href="https://aprs.fi" target="/">aprs.fi</a>
 		</div>
 	</div>
