--- a/index.html
+++ b/index.html
@@ -4,22 +4,32 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1.0">
-	<title>Aether Project Tracker</title>
-	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-	 crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<title>Aether Project Archive</title>
+	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico'/>
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,900" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxeU3JHfOGFY71jQDt3IAmpVyOilUvpM&callback=retrieveData"></script>
-	<style type="text/css" id="cheek">
 	</style>
 </head>
 
 <body>
 	<div id="mainContent">
+		<div id="header">
+			<!--<img src="images/logo.png" alt="logo">-->
+			<h1>Aether Project</h1>
+		</div>
+		<div id="nav" class="noselect">
+			<a id="imageLink" class="noselect">Images</a>
+			<a id="videoLink" class="noselect">Videos</a>
+			<a id="dataLink" class="noselect">Data</a>
+			<a id="mapLink" class="noselect">Map</a>
+		</div>
+		<div id="imageContainer"></div>
+		<div id="videoContainer"></div>
+		<div id="dataContainer"></div>
 		<div id="mapContainer"></div>
 	</div>
 </html>
