--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 		</div>
 		<div id="imageContainer"></div>
 		<div id="videoContainer"></div>
-		<div id="dataContainer"></div>
+		<div id="dataContainer">
+			<div class="tableContainer" id="dataTable">
+			</div>
+		</div>
 		<div id="mapContainer"></div>
 	</div>
 </html>
