Added navigation links for data tables

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 		<div id="imageContainer"></div>
 		<div id="videoContainer"></div>
 		<div id="dataContainer">
+			<div id="dataNav" class="noselect">
+				<a id="locationLink" class="noselect">Location</a>
+				<a id="speedLink" class="noselect">Speed</a>
+				<a id="altitudeLink" class="noselect">Altitude</a>
+			</div>
 			<div class="tableContainer" id="dataTable">
 			</div>
 		</div>
