Page defaults to images, styled image display

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
 			<a id="dataLink" class="noselect">Data</a>
 			<a id="mapLink" class="noselect">Map</a>
 		</div>
-		<div id="imageContainer"></div>
+		<div id="imageContainer">
+            <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
+            <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
+            <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
+            <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
+            <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
+            <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
+        </div>
 		<div id="videoContainer"></div>
 		<div id="dataContainer">
 			<div id="dataNav" class="noselect">
