Began to work on video playback framework

--- a/index.html
+++ b/index.html
@@ -35,7 +35,21 @@
             <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
             <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
         </div>
-		<div id="videoContainer"></div>
+		<div id="videoContainer">
+            <div id="playback-container">
+                <video width="400" controls>
+                  <source src="mov_bbb.mp4" type="video/mp4">
+                  <source src="mov_bbb.ogg" type="video/ogg">
+                  Your browser does not support HTML5 video.
+                </video>
+            </div>
+            <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
+            <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
+            <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
+            <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
+            <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
+            <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
+        </div>
 		<div id="dataContainer">
 			<div id="dataNav" class="noselect">
 				<a id="locationLink" class="noselect">Location</a>
