Loaded images onto site

--- a/index.html
+++ b/index.html
@@ -27,14 +27,7 @@
 			<a id="dataLink" class="noselect">Data</a>
 			<a id="mapLink" class="noselect">Map</a>
 		</div>
-		<div id="imageContainer">
-            <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
-            <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
-            <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
-            <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
-            <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
-            <img class="display-image" src="https://www.w3schools.com/css/img_fjords.jpg">
-        </div>
+		<div id="imageContainer"></div>
 		<div id="videoContainer">
             <div id="playback-container">
                 <video width="400" controls>
