Added home page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div id="mainContent">
 		<div id="header">
 			<!--<img src="images/logo.png" alt="logo">-->
-			<h1>Aether Project</h1>
+			<a id="homeLink" class="noselect"><h1>Aether Project</h1></a>
 		</div>
 		<div id="nav" class="noselect">
 			<a id="imageLink" class="noselect">Images</a>
@@ -27,20 +27,21 @@
 			<a id="dataLink" class="noselect">Data</a>
 			<a id="mapLink" class="noselect">Map</a>
 		</div>
+        <div id="homeContainer">
+            <div id="home-text">
+                <h2>ABOUT</h2>
+                <p>Created by the James E. Taylor High School Computer Science Club, the Aether Project aimed to collect an assortment of data during the ascent of a large weather balloon. It climbed to a peak height of about 107,000 feet, about 3 times the height commercial airliners fly at. Also, its recorded peak speed was 112 miles per hour during its descent back to Earth. Overall, the project was a large success thanks to the collective efforts of all members. All collected data can be viewed on the website.</p>
+            </div>
+            <span id="credits" class="noselect">Website by C. Doggett and S. Cortes</span>
+        </div>
 		<div id="imageContainer"></div>
 		<div id="videoContainer">
             <div id="playback-container">
-                <video width="400" controls>
-                  <source src="mov_bbb.mp4" type="video/mp4">
-                  <source src="mov_bbb.ogg" type="video/ogg">
+                <video width="800" controls>
+                  <source src="video/mov_bbb.mp4" type="video/mp4">
                   Your browser does not support HTML5 video.
                 </video>
             </div>
-            <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
-            <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
-            <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
-            <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
-            <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
             <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
         </div>
 		<div id="dataContainer">
