--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="homeContainer">
             <div id="home-text">
                 <h2>ABOUT</h2>
-                <p>Created by the James E. Taylor High School Computer Science Club, the Aether Project aimed to collect an assortment of data during the ascent of a large weather balloon. It climbed to a peak height of about 107,000 feet, about 3 times the height commercial airliners fly at. Also, its recorded peak speed was 112 miles per hour during its descent back to Earth. Overall, the project was a large success thanks to the collective efforts of all members. All collected data can be viewed on the website.</p>
+                <p>Created by the James E. Taylor High School Computer Science Club, the Aether Project aimed to collect an assortment of data during the ascent of a large weather balloon. The balloon, strapped with multiple cameras and tracking devices, was release from Hallettsville, Texas. The balloon climbed to a peak height of about 107,000 feet, about 3 times the height commercial airliners fly at. Shortly after reaching its peak height, the balloon popped, and the payload attached to it, secured by a parachute, began its descent. Its recorded peak speed was 112 miles per hour during its descent back to Earth, where it would land near Hempstead, Texas. Overall, the project was a large success thanks to the collective efforts of all members. All collected data can be viewed on this website.</p>
             </div>
             <span id="credits" class="noselect">Website by C. Doggett and S. Cortes</span>
         </div>
