Added fullscreen image gallery

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
             </div>
             <span id="credits" class="noselect">Website by C. Doggett and S. Cortes</span>
         </div>
-		<div id="imageContainer"></div>
+		<div id="imageContainer">
+            <div id="fullscreenGallery">
+                <i class="fa fa-chevron-left noselect" id="gallery-left" aria-hidden="true"></i>
+                <img id="fullscreenImage" src="images/balloon/1.JPG">
+                <i class="fa fa-chevron-right noselect" id="gallery-right" aria-hidden="true"></i>
+            </div>
+        </div>
 		<div id="videoContainer">
             <div id="playback-container">
                 <video width="800" controls>
