Added video content

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 		<div id="videoContainer">
             <div id="playback-container">
                 <video width="800" controls>
-                  <source src="video/mov_bbb.mp4" type="video/mp4">
+                  <source src="videos/GP042042.mp4" type="video/mp4">
                   Your browser does not support HTML5 video.
                 </video>
             </div>
-            <img class="display-image video-thumbnail" src="https://www.w3schools.com/css/img_fjords.jpg">
+            <img class="display-image video-thumbnail" src="images/thumbnails/1.png">
         </div>
 		<div id="dataContainer">
 			<div id="dataNav" class="noselect">
